@@ -1,3 +1,11 @@
+2014-01-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-pgp.el (mime-pgp-verify-when-preview): New customizable
+	variable.
+	(mime-display-multipart/pgp-signed): New function.
+
+	* semi-setup.el: Add setting for pgp-signed entity.
+
 2014-01-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* semi-setup.el: Add setting for previewing
